--- a/src/components/MobileNavbar/style.css
+++ b/src/components/MobileNavbar/style.css
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: space-evenly;
     font-size: 12px;
-    padding: 4px;
+    padding: 4px 2px;
+    overflow: hiddenz;
 }
 .mobileSearch{
     width: fit-content;
