--- a/src/components/Searchbar/style.css
+++ b/src/components/Searchbar/style.css
@@ -12,6 +12,7 @@
   @media screen and (max-width: 768px) {
     .search:valid {
       width:auto;
-      padding: 10px 5px;
+      padding: 7px 3px;
+      margin: 2px 2px;
     }
   }
