--- a/src/components/MobileNavbar/style.css
+++ b/src/components/MobileNavbar/style.css
@@ -9,10 +9,11 @@
 }
 .mobileSearch{
     width: fit-content;
-    padding: 5px;
+    padding: 3px;
     border: none;
     border-radius: 5px;
     background: #f5f5f6;
+    margin: 2px 0;
 }
 .Mobilenav-links{
     font-size: 10px;
@@ -28,4 +29,7 @@
 .moblogo img{
     height: 40px;
     width: auto;
+}
+.user-actions  .mobBag{
+padding-top: 0;
 }
